--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 secured-backend.enabled=true
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql = true
+logging.level.org.hibernate=WARN
+spring.jpa.properties.hibernate.generate_statistics=false
