--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
-secured-backend.enabled=true
+secured-backend.enabled=false
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
