--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <version>1.52</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>3.2.7.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
