--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
 logging.level.org.hibernate=WARN
 spring.jpa.properties.hibernate.generate_statistics=false
+
+openssh.key=C:/tmp/privatekey.openssh
