--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ secured-backend.enabled=false
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
-logging.level.org.hibernate=WARN
+logging.level.org.hibernate=INFO
 spring.jpa.properties.hibernate.generate_statistics=false
 
 openssh.key=C:/tmp/privatekey.openssh
+
+spring.http.multipart.max-file-size=500MB
+spring.http.multipart.max-request-size=500MB
