--- a/src/main/resources/src/package.json
+++ b/src/main/resources/src/package.json
@@ -13,20 +13,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^5.2.2",
-    "@angular/common": "^5.2.2",
-    "@angular/compiler": "^5.2.2",
-    "@angular/core": "^5.2.2",
-    "@angular/forms": "^5.2.2",
-    "@angular/http": "^5.2.2",
-    "@angular/platform-browser": "^5.2.2",
-    "@angular/platform-browser-dynamic": "^5.2.2",
-    "@angular/router": "^5.2.2",
+    "@angular/animations": "^5.2.3",
+    "@angular/common": "^5.2.3",
+    "@angular/compiler": "^5.2.3",
+    "@angular/core": "^5.2.3",
+    "@angular/forms": "^5.2.3",
+    "@angular/http": "^5.2.3",
+    "@angular/platform-browser": "^5.2.3",
+    "@angular/platform-browser-dynamic": "^5.2.3",
+    "@angular/router": "^5.2.3",
     "core-js": "^2.5.3",
     "d3": "^4.12.2",
     "font-awesome": "4.7.0",
     "jquery": "^3.3.1",
-    "primeng": "^5.2.0-rc.2",
+    "primeng": "^5.2.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "systemjs": "^0.20.0",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/d3": "^4.12.0",
     "@types/jquery": "^3.3.0",
-    "@types/node": "^8.5.9",
+    "@types/node": "^9.4.0",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
     "css-loader": "^0.28.9",
@@ -44,14 +44,15 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.0",
     "http-proxy-middleware": "^0.17.4",
+    "rimraf": "latest",
     "script-loader": "^0.7.2",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.20.1",
     "ts-loader": "^3.3.1",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1",
-    "rimraf": "latest"
+    "webpack-merge": "^4.1.1"
   },
   "repository": {}
 }
