--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ logging.level.org.hibernate=INFO
 spring.jpa.properties.hibernate.generate_statistics=false
 
 openssh.key=C:/tmp/privatekey.openssh
+files.home=C:/tmp
 
 spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
