--- a/src/main/resources/src/package.json
+++ b/src/main/resources/src/package.json
@@ -26,9 +26,13 @@
     "d3": "^4.12.2",
     "font-awesome": "4.7.0",
     "jquery": "^3.3.1",
+    "net": "^1.0.2",
+    "ng2-stomp-service": "^1.2.2",
     "primeng": "^5.2.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "systemjs": "^0.20.0",
     "zone.js": "^0.8.20"
   },
