--- a/src/main/resources/src/tsconfig.json
+++ b/src/main/resources/src/tsconfig.json
@@ -11,5 +11,8 @@
     "target": "es5",
     "skipLibCheck": true,
     "typeRoots": [ "./node_modules/@types" ]
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
