Instance Checker Mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ files.home=C:/tmp
 
 spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
+
+spring.mail.host=192.168.110.17
+spring.mail.port=25
+unreachable-instance-mail=bruss@eins-gmbh.de,manuel.bruss@gmail.com
+unreachable-instance-enable-mail=true
