update spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.generate_statistics=false
 openssh.key=C:/tmp/privatekey.openssh
 files.home=C:/tmp
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
 
