--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.jpa.properties.hibernate.format_sql = true
 logging.level.org.hibernate=INFO
 spring.jpa.properties.hibernate.generate_statistics=false
 
-openssh.key=C:/tmp/privatekey.openssh
+openssh.key=
+openssh.pass=
 files.home=C:/tmp
 
 spring.http.multipart.max-file-size=500MB
