--- a/pom.xml
+++ b/pom.xml
@@ -144,36 +144,33 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.3</version>
-                <configuration>
-                    <nodeVersion>v6.9.1</nodeVersion>
-                    <npmVersion>3.9.3</npmVersion>
-                    <installDirectory>target</installDirectory>
-                    <workingDirectory>${basedir}/src/main/resources/src</workingDirectory>
-                </configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <executions>
-                    <!-- install node & npm -->
+                    <!-- Required: This following calls `npm run build` where 'build' is
+                         the script name I used in my project, change this if yours is
+                             different -->
                     <execution>
-                        <id>install node and npm</id>
+                        <id>npm run build (compile)</id>
                         <goals>
-                            <goal>install-node-and-npm</goal>
+                            <goal>exec</goal>
                         </goals>
-                    </execution>
-
-                    <!--npm install -->
-                    <execution>
-                        <id>npm run build</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
+                        <phase>validate</phase>
                         <configuration>
-                            <arguments>run build</arguments>
+                            <executable>npm</executable>
+                            <arguments>
+                                <argument>run</argument>
+                                <argument>build</argument>
+                            </arguments>
                         </configuration>
                     </execution>
 
                 </executions>
+
+                <configuration>
+                    <workingDirectory>src/main/resources/frontend</workingDirectory>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -185,7 +182,7 @@
             <plugin>
                 <groupId>cz.habarta.typescript-generator</groupId>
                 <artifactId>typescript-generator-maven-plugin</artifactId>
-                <version>2.20.583</version>
+                <version>2.21.588</version>
                 <executions>
                     <execution>
                         <id>generate</id>
@@ -202,7 +199,8 @@
                         <class>de.bruss.demontoo.websockets.InstanceHealthMessage</class>
                     </classes>
                     <outputKind>module</outputKind>
-                    <outputFile>src/main/resources/frontend/src/app/java-types-module.d.ts</outputFile>
+                    <outputFileType>implementationFile</outputFileType>
+                    <outputFile>src/main/resources/frontend/src/app/java-types-module.ts</outputFile>
                     <optionalProperties>all</optionalProperties>
                 </configuration>
             </plugin>
@@ -213,8 +211,8 @@
                 <filtering>true</filtering>
                 <directory>src/main/resources/</directory>
                 <excludes>
-                    <exclude>src/**</exclude>
-                    <exclude>src/node_modules/**</exclude>
+                    <exclude>frontend/**</exclude>
+                    <exclude>frontend/node_modules/**</exclude>
                     <exclude>public/fonts/**</exclude>
                 </excludes>
             </resource>
